test : 문제1 - 시작면과 마지막 면에 대한 유효성 테스트 코드 데이터 수정